@@ -1,4 +1,4 @@
-// $Id: ceval.c,v 1.6 2007-07-20 22:43:54 zeeb90au Exp $
+// $Id: ceval.c,v 1.7 2007-07-21 11:02:38 zeeb90au Exp $
 // -*- c-file-style: "java" -*-
 // This file is part of SmallBASIC
 //
@@ -371,18 +371,28 @@ void cev_log(void)
     }
     while (CODE(IP) == kwTYPE_LOGOPR) {
         char op;
+        addr_t shortcut;
+        addr_t shortcut_offs;
 
         IP++;
         op = CODE(IP);
         IP++;
-        cev_add1(kwTYPE_EVPUSH);        // PUSH R
+        cev_add1(kwTYPE_EVPUSH); // PUSH R (push the left side result
+        cev_add1(kwTYPE_EVAL_SC);
+        cev_add2(kwTYPE_LOGOPR, op);    // R = LEFT op R
+
+        shortcut = bc_out->count; // shortcut jump target 
+        cev_add_addr(0);
 
         cev_cmp();              // right seg // R = cev_cmp()
-        if (comp_error)
+        if (comp_error) {
             return;
-
+        }
         cev_add1(kwTYPE_EVPOP); // POP LEFT
         cev_add2(kwTYPE_LOGOPR, op);    // R = LEFT op R
+
+        shortcut_offs = bc_out->count - shortcut;
+        memcpy(bc_out->ptr + shortcut, &shortcut_offs, ADDRSZ);
     }
 }
 
